# agent-zero

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent_zero/: __init__.py  __main__.py  cli.py  config.py  context.py  diff_parser.py  diff_summary.py  evals.py  memory.py  model_client.py  repo_index.py  task_classifier.py  usage.py
agent_zero/tools/: __init__.py  command_tool.py  file_tools.py  patch_tool.py
docs/: agent-hub-prep-todo.md  agent-zero-finish-line.md  high-level-design.md  project-todo.md  testing-plan.md
evals/: ask-project.json
evals/suites/: core.json
tests/: test_cli.py  test_command_tool.py  test_config.py  test_context.py  test_diff_parser.py  test_diff_summary.py  test_evals.py  test_file_tools.py  test_memory.py  test_model_client.py  test_patch_tool.py  test_repo_index.py  test_task_classifier.py  test_usage.py
